# dino_math

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp  dino_math.hpp  timer.hpp
include/graphics_context/: rendering_context.hpp  surface.hpp  surface_cache.hpp
include/object/: background_object.hpp  dashed_line_object.hpp  dino_collage_object.hpp  dino_object.hpp  navigate_object.hpp  object.hpp  splash_screen_object.hpp  text_object.hpp
include/scene/: scene.hpp
include/scene/00_cache_generation_scene/: cache_generation_scene.hpp
include/scene/01_splash_screen/: splash_screen_scene.hpp
include/scene/02_dino_selection/: dino_selection_scene.hpp
include/scene/04_gameplay/: gameplay_scene.hpp
include/user_interface/: button.hpp  screen.hpp  sdl_screen.hpp  ui_event.hpp  xlib_screen.hpp
src/: common.cpp  dino_math.cpp  main.cpp  timer.cpp
src/graphics_context/: rendering_context.cpp  surface.cpp  surface_cache.cpp
src/object/: background_object.cpp  dashed_line_object.cpp  dino_collage_object.cpp  dino_object.cpp  navigate_object.cpp  object.cpp  splash_screen_object.cpp  text_object.cpp
src/scene/: scene.cpp
src/scene/00_cache_generation_scene/: cache_generation_scene.cpp
src/scene/01_splash_screen/: splash_screen_scene.cpp
src/scene/02_dino_selection/: dino_selection_scene.cpp
src/scene/04_gameplay/: gameplay_scene.cpp
src/user_interface/: button.cpp  screen.cpp  xlib_screen.cpp
